Fix illegal nest #1

--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -1,5 +1,5 @@
 .loginPage
   .container
     .loginPage_contents
-      %h1.h3.loginPge_contents_title 新しいマッチを見つけよう
-        = link_to "メールアドレスでログインする", new_user_session_path, class: "btn loginPage_contents_btn"
+      %h1.h3.loginPage_contents_title 新しいマッチを見つけよう
+      = link_to "メールアドレスでログインする", new_user_session_path, class: "btn loginPage_contents_btn"
