--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,8 +2,10 @@
 @import "bootstrap";
 @import "font-awesome-sprockets";
 @import "font-awesome";
+
 @import "common";
 
 /* pages */
 @import "top";
 @import "users/sign_up";
+@import "users/sign_in";
