--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,36 +1,25 @@
-%h2
-  Edit #{resource_name.to_s.humanize}
-= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
-  = render "devise/shared/error_messages", resource: resource
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true, autocomplete: "email"
-  - if devise_mapping.confirmable? && resource.pending_reconfirmation?
-    %div
-      Currently waiting confirmation for: #{resource.unconfirmed_email}
-  .field
-    = f.label :password
-    %i (leave blank if you don't want to change it)
-    %br/
-    = f.password_field :password, autocomplete: "new-password"
-    - if @minimum_password_length
-      %br/
-      %em
-        = @minimum_password_length
-        characters minimum
-  .field
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "new-password"
-  .field
-    = f.label :current_password
-    %i (we need your current password to confirm your changes)
-    %br/
-    = f.password_field :current_password, autocomplete: "current-password"
-  .actions
-    = f.submit "Update"
-%h3 Cancel my account
-%p
-  Unhappy? #{button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete}
-= link_to "Back", :back
+.userEditPage
+  .header アカウント編集
+    .container
+      = form_for current_user, url: registration_path(current_user) do |f|
+        .form-group
+          = f.label '名前'
+          = f.text.field :name, class: "form-control"
+        .form-group
+          = f.label '自己紹介'
+          = f.text.area :self_introduction, class: "form-control"
+        .form-group
+          性別:
+          = f.label '男'
+          = f.radio_button :sex, :男
+          = f.label '女'
+          = f.radio_button :sex, :女
+        .form-group
+          画像:
+          = f.file_field :img_name
+
+        .form-group
+          = f.label '更新するにはパスワードを入力してください'
+          = f.password_field :current_password, class: "form-control", autocomplete: "off"
+        .text-center
+          = f.submit '更新', class: "btn submitBtn"
