Add code to request for like/dislike #11

--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -18,8 +18,59 @@
     %a.like{:href => "#"}
       %i.fas.fa-heart.fa-2x
 :javascript
-  $("#tinderslide").jTinder();
+  // スワイプするユーザー数の定数を定義
+  var usersNum = #{@users.length}
+  var currentUserIndex = 0;
+  var postReaction = function (user_id, reaction) {
+    $.ajaxSetup({
+        headers: {
+            'X-CSRF-TOKEN': $('meta[name="csrf-token"]').attr('content'),
+        }
+    });
+    $.ajax({
+      type: "POST",
+      url: "#{reactions_path}",
+      data: {
+        user_id: user_id,
+        reaction: reaction,
+      },
+      success: function(j_data){
+        console.log("success")
+      }
+    });
+  }
+  $("#tinderslide").jTinder({
+    onDislike: function (item) {
+      // 初期値0が入っていてユーザーがlike,dislikeボタンを押すたびに1ずつ足されていく
+      currentUserIndex++;
+      checkUserNum();
+      // item[0]: スワイプしたユーザーのlistが入る
+      // dataset.データ属性
+      var user_id = item[0].dataset.user_id
+      postReaction(user_id, 'dislike')
+    },
+    onLike: function (item) {
+      currentUserIndex++;
+      checkUserNum();
+      var user_id = item[0].dataset.user_id
+      postReaction(user_id, 'like')
+    },
+    animationRevertSpeed: 200,
+    animationSpeed: 400,
+    threshold: 1,
+    likeSelector: '.like',
+    dislikeSelector: '.dislike'
+  });
   $('.actions .like, .actions .dislike').click(function(e){
     e.preventDefault();
     $("#tinderslide").jTinder($(this).attr('class'));
   });
+
+  function checkUserNum() {
+    // スワイプするユーザー数とスワイプした回数が同じになればaddClassする
+    if (currentUserIndex === usersNum){
+      $(".noUser").addClass("is-active");
+      $("#actionBtnArea").addClass("is-none")
+      return;
+    }
+  }
