Add signout link in user page #15

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -13,4 +13,5 @@
       .userAction
         .userAction_edit.userAction_common
           = link_to(content_tag(:i, "", class: "fas fa-cog fa-2x"), destroy_user_session_path, method: :delete)
-          %span ログアウト
+          %span
+            = link_to 'ログアウト', destroy_user_session_path, method: :delete
