--- a/app/views/chat/show.html.haml
+++ b/app/views/chat/show.html.haml
@@ -1,6 +1,6 @@
 .chatPage
   %header.header
-  = link_to "", matching_index_path, class: "linkToMatching"
+    = link_to "", matching_index_path, class: "linkToMatching"
     .chatPartner
       .chatPartner_img= image_tag @chat_room_user.img_name.url
       .chatPartner_name= @chat_room_user.name
@@ -9,4 +9,4 @@
       = render @chat_messages
   %form.messageInputForm
     .container
-      %input.messageInputForm_input{"data-behavior" => "room_speaker", :placeholder => "メッセージを入力...", :type => "text"}/
+      %input.messageInputForm_input{"data-behavior" => "room_speaker", :placeholder => "メッセージを入力...", :type => "text"}
