Add current_user_id in meta tag #19

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,8 @@
     = csrf_meta_tags
     = csp_meta_tag
 
+    %meta{:content => "#{current_user.id if current_user}", :name => "current_user_id"}/
+
     %meta{:content => "width=device-width, initial-scale=1", :name => "viewport"}/
 
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
